--- a/5. Introdução à Orientação a Objeto I/5.1 - Paradigmas de programação.md
+++ b/5. Introdução à Orientação a Objeto I/5.1 - Paradigmas de programação.md
@@ -175,7 +175,7 @@ Caso queira entender melhor sobre, assista o vídeo abaixo:
 - [Medium - Paradigmas de Programação](https://medium.com/zeroeumas/paradigmas-de-programacao-845ecf7b4aaf)
 
 ---
-[Voltar para o início](https://github.com/reprograma/on25-IJS-orientacao-objetos-I/blob/master/README.md)
+[Voltar para o início](../README.md)
 
 <p align="center">
   Desenvolvido com &#128156
