--- a/5. Introdução à Orientação a Objeto I/5.2 - Programação Orientada a Objetos.md
+++ b/5. Introdução à Orientação a Objeto I/5.2 - Programação Orientada a Objetos.md
@@ -60,7 +60,7 @@ TEXTO
 - [Alura - POO: o que é programação orientada a objetos?](https://www.alura.com.br/artigos/poo-programacao-orientada-a-objetos)
 
 ---
-[Voltar para o início](https://github.com/reprograma/on25-IJS-orientacao-objetos-I/blob/master/README.md)
+[Voltar para o início](../README.md)
 
 <p align="center">
   Desenvolvido com &#128156
