--- a/5. Introdução à Orientação a Objeto I/5.2 - Programação Orientada a Objetos.md
+++ b/5. Introdução à Orientação a Objeto I/5.2 - Programação Orientada a Objetos.md
@@ -3,7 +3,9 @@
 </h1>
 
 ### Resumo
+
 - [Programação Orientada a Objetos](#programação-orientada-a-objetos)
+
   - [Conceito e motivação](#conceito-e-motivação)
   - [Estrutura](#estrutura)
     - [Classes](#classes)
@@ -19,47 +21,108 @@
 - [Links Úteis](#links-úteis)
 
 # Programação Orientada a Objetos
-TEXTO
+
+Programação Orientada a Objetos também pode ser chamado de POO, OOP (_Object-Oriented Programming_) ou simplesmente OO (Orientação a Objetos).
 
 ## Conceito e motivação
 
-TEXTO TEXTO TEXTO
+O paradigma de Orientação a Objetos (OO) foi criado como uma extensão do já existente paradigma estruturado. Com a introdução do conceito de objetos foi possível encapsular código e dados, e herdar comportamentos e características. Essas funcionalidades trazem as vantagens da reutilização de código, representação tangível de entidades do mundo real, e maior segurança do estado dos objetos por meio do encapsulamento.
+
+A POO é um paradigma de programação que se propõe a abordar o design de um sistema em termos de **entidades** - os _objetos_ - e relacionamentos entre essas entidades.
+
+Para exemplificar:
+
+> Imagine que estamos desenhando um sistema de gerenciamento de funcionários para uma empresa:
+>
+> - O **funcionário**, sob esta abordagem, será uma _entidade_ (um _objeto_), e ele deve pertencer a um **departamento**.
+> - O **departamento** também será uma _entidade_ (um _objeto_).
+> - Um departamento pode ter um ou mais funcionários.
+>   Logo, estabelecemos um relacionamento entre funcionário e departamento.
+
+> Imagine ainda que:
+>
+> - O funcionário pode ser _terceirizado_ ou _direto_.
+>   Com isso, estabelecemos uma generalização, o **funcionário**, e sua _especialização_, ou seja, funcionário terceirizado ou funcionário direto, por exemplo.
+
+Esse exemplo ilustra um acontecimento da vida real que pode ser escrito através de código utilizando a Programação Orientada a Objetos.
+
+Diferente do paradigma de programação que estamos acostumadas, na orientação a objetos, uma variável será vista como um **atributo de um objeto**, algo que ele **“tem”**. _Um funcionário tem um nome_.
+As funções passarão a ser as responsabilidades **do objeto**.
+
+Se quisermos uma lista dos funcionários de um departamento, a função que retorna esses dados será responsabilidade da classe Departamento.
+
+A utilização da POO traz diversos benefícios para os códigos. Alguns desses benefícios são o encapsulamento e a reutilização de códigos, os tornando mais legíveis e trazendo uma maior produtividade para quem está desenvolvendo.
 
 ## Estrutura
-TEXTO TEXTO
+
+A Programação Orientada a Objetos possui dois pilares de sustentação: a utilização de classes e objetos.
+Além de possuírem, dentro dessas, atributos e métodos.
 
 ### Classes
-TEXTO
+
+As classes são formas de definir objetos que serão reutilizados e instanciados durante o código.
+
+Em poucas palavras, classes são tipos de dados definidos pelo usuário. As classes são o modelo para um objeto, que contém métodos e atributos.
+Em geral, quando utilizamos POO, classes são representações em códigos de entidades do mundo real, como Pessoas, Contas Bancárias, Produtos e etc.
+
+Uma classe formada por propriedades, que contém informações referentes àquele objeto, e por métodos, que são funções exclusivas para serem utilizadas pelos objetos criados a partir dessa classe.
+
+Exemplo de classe:
+
+```javascript
+class Funcionário {
+  name;
+  
+  constructor(name) {
+    this.name = name;
+  }
+}
+
+const animal1 = new Animal('cachorro', 'Aslam', 3);
+console.log(animal1);
+```
 
 ### Objetos
+
 TEXTO
 
 ### Atributos
+
 TEXTO
+
 ### Métodos
+
 TEXTO
 
 ## Os 4 pilares
+
 TEXTO
 
 ### Abstração
+
 TEXTO
 
 ### Encapsulamento
+
 TEXTO
 
 ### Herança
+
 TEXTO
 
 ### Polimorfismo
+
 TEXTO
 
 # Links Úteis
+
 - [Dev Media - Programação Orientada a Objetos](https://www.devmedia.com.br/programacao-orientada-a-objetos-e-programacao-estruturada/32813)
 - [Dev Media - Os 4 pilares da Programação Orientada a Objetos](https://www.devmedia.com.br/os-4-pilares-da-programacao-orientada-a-objetos/9264)
 - [Alura - POO: o que é programação orientada a objetos?](https://www.alura.com.br/artigos/poo-programacao-orientada-a-objetos)
+- [Kenzie - O que é programação orientada a objetos e quais são seus pilares?](https://kenzie.com.br/blog/programacao-orientada-a-objetos/)
 
 ---
+
 [Voltar para o início](../README.md)
 
 <p align="center">
