atualizar conteúdo e criar exercícios

--- a/5. Introdução à Orientação a Objeto I/5.2 - Programação Orientada a Objetos.md
+++ b/5. Introdução à Orientação a Objeto I/5.2 - Programação Orientada a Objetos.md
@@ -28,14 +28,14 @@ Programação Orientada a Objetos também pode ser chamado de POO, OOP (_Object-
 
 O paradigma de Orientação a Objetos (OO) foi criado como uma extensão do já existente paradigma estruturado. Com a introdução do conceito de objetos foi possível encapsular código e dados, e herdar comportamentos e características. Essas funcionalidades trazem as vantagens da reutilização de código, representação tangível de entidades do mundo real, e maior segurança do estado dos objetos por meio do encapsulamento.
 
-A POO é um paradigma de programação que se propõe a abordar o design de um sistema em termos de **entidades** - os _objetos_ - e relacionamentos entre essas entidades.
+A POO é um paradigma de programação que se propõe a abordar o design de um sistema em termos de **entidades** (que representam algo no mundo real) e **relacionamentos entre essas entidades**.
 
 Para exemplificar:
 
 > Imagine que estamos desenhando um sistema de gerenciamento de funcionários para uma empresa:
 >
-> - O **funcionário**, sob esta abordagem, será uma _entidade_ (um _objeto_), e ele deve pertencer a um **departamento**.
-> - O **departamento** também será uma _entidade_ (um _objeto_).
+> - O **Funcionário**, sob esta abordagem, será uma _entidade_, e ele deve pertencer a um **departamento**.
+> - O **departamento** também será uma _entidade_.
 > - Um departamento pode ter um ou mais funcionários.
 >   Logo, estabelecemos um relacionamento entre funcionário e departamento.
 
@@ -45,6 +45,8 @@ Para exemplificar:
 >   Com isso, estabelecemos uma generalização, o **funcionário**, e sua _especialização_, ou seja, funcionário terceirizado ou funcionário direto, por exemplo.
 
 Esse exemplo ilustra um acontecimento da vida real que pode ser escrito através de código utilizando a Programação Orientada a Objetos.
+
+Poderíamos criar uma classe para a entidade Funcionário, uma classe para a entidade Departamento, e criar as relações entre elas.
 
 Diferente do paradigma de programação que estamos acostumadas, na orientação a objetos, uma variável será vista como um **atributo de um objeto**, algo que ele **“tem”**. _Um funcionário tem um nome_.
 As funções passarão a ser as responsabilidades **do objeto**.
@@ -59,7 +61,6 @@ A Programação Orientada a Objetos possui dois pilares de sustentação: a util
 Além de possuírem, dentro dessas, atributos e métodos.
 
 ### Classes
-
 As classes são formas de definir objetos que serão reutilizados e instanciados durante o código.
 
 Em poucas palavras, classes são tipos de dados definidos pelo usuário. As classes são o modelo para um objeto, que contém métodos e atributos.
@@ -68,51 +69,122 @@ Em geral, quando utilizamos POO, classes são representações em códigos de en
 Uma classe formada por propriedades, que contém informações referentes àquele objeto, e por métodos, que são funções exclusivas para serem utilizadas pelos objetos criados a partir dessa classe.
 
 Exemplo de classe:
-
 ```javascript
-class Funcionário {
-  name;
-  
-  constructor(name) {
-    this.name = name;
-  }
+class Funcionario {
+  constructor() {}
 }
-
-const animal1 = new Animal('cachorro', 'Aslam', 3);
-console.log(animal1);
 ```
 
 ### Objetos
+Objetos são instâncias de classes criadas com dados específicos. Enquanto classes são como definições do conceito de uma entidade do mundo real, objetos são a representação de um exemplar da entidade.
 
-TEXTO
+Exemplo de objeto:
+```javascript
+const funcionario1 = new Funcionario();
+```
 
 ### Atributos
+Atributos são as **características** que as classes (e, por consequência, seus objetos) possui.
 
-TEXTO
+Exemplo de classe com atributos:
+```javascript
+class Funcionario {
+  nome;
+  salario;
+
+  constructor(nome, salario) {
+    this.nome = nome;
+    this.salario = salario;
+  }
+}
+```
 
 ### Métodos
+Métodos são as **funções** que a classe (e, por consequência, seus objetos) possui.
 
-TEXTO
+Exemplo de classe com métodos:
+```javascript
+class Funcionario {
+  nome;
+  salario;
+
+  constructor(nome, salario) {
+    this.nome = nome;
+    this.salario = salario;
+  }
+
+  receberAumento(aumento) {
+    this.salario = this.salario + aumento;
+  }
+}
+```
+
+---
+
+Para consolidar esses conceitos, vamos pensar em outro exemplo:
+
+Imagine que você comprou um carro recentemente e decide modelar esse carro usando programação orientada a objetos.
+- O seu carro tem as **características** que você estava procurando: um motor 2.0 híbrido, azul escuro, quatro portas, câmbio automático etc.
+Ele também possui **comportamentos** que, provavelmente, foram o motivo de sua compra, como acelerar, desacelerar, acender os faróis, buzinar e tocar música.
+
+Podemos dizer que o carro novo é um **objeto**, onde suas características são seus **atributos** e seus comportamentos são ações ou **métodos**.
+
+Além disso, seu carro é um objeto seu, mas na loja onde você o comprou existiam vários outros, muito similares: com quatro rodas, volante, câmbio, retrovisores, faróis, dentre outras partes.
+
+Observe que, apesar do seu carro ser único (por exemplo, possui um registro único no Departamento de Trânsito), podem existir outros com exatamente os mesmos atributos, ou parecidos, ou mesmo totalmente diferentes, mas que ainda são considerados carros.
+
+Podemos dizer então que seu objeto pode ser classificado como um carro (ou seja, seu objeto pertence à classe Carro), e que seu carro nada mais é que uma **instância** dessa classe chamada "Carro".
+
+<div style="text-align:center;">
+  <img src="https://github.com/reprograma/on25-IJS-orientacao-objetos-I/assets/26902816/308b8149-9ddf-4b2e-a9e9-7418199a5c8e" />
+</div>
+
+Assim, abstraindo um pouco a analogia, uma classe é um conjunto de características e comportamentos que definem o conjunto de objetos pertencentes à essa classe.
+
+Repare que a classe em si é um conceito abstrato, como um *molde*, que se torna concreto e palpável através da criação de um *objeto*.
+Chamamos essa criação de instanciação da classe, como se estivéssemos usando esse molde (classe) para criar um objeto.
+
+**Exercícios de criação de classes e objetos**
+#### → Vamos aplicar?
+- [ ] [Exercício 1](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%201/)
+- [ ] [Exercício 2](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%202/)
+- [ ] [Exercício 3](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%203/)
 
 ## Os 4 pilares
-
-TEXTO
+As duas bases da POO são os conceitos de classe e objeto.
+Na prática, para a POO funcionar, ela precisa utilizar de 4 pilares básicos. Para uma linguagem de programação ser considerada orientada a objetos, deve haver quatro comportamentos característicos. São eles:
 
 ### Abstração
+Abstrair algo significa esconder os detalhes da implementação dentro de algo – às vezes um protótipo, às vezes em uma função. Portanto, quando você chama a função, não precisa entender exatamente o que ela está fazendo.
 
-TEXTO
+Na Orientação a Objetos, a abstração consiste em extrair entidades do mundo real para dentro do código seguindo a fio suas responsabilidades.
+
+Suas qualidades e responsabilidades devem ser bem definidas.
+
+Por exemplo:
+Ao criar um estoque de itens em uma loja virtual, um produto teria como características: “nome”, “categoria”, “quantidade”, etc.
+
+O mesmo produto também teria como responsabilidade o ato de diminuir ou aumentar a sua quantidade de itens no estoque, ou até o ato de ser removido do estoque por completo.
 
 ### Encapsulamento
+Quando definimos os atributos de um objeto, devemos garantir que alterar os valores desses atributos sejam responsabilidade exclusiva do próprio objeto. O encapsulamento, portanto, é o conceito de proteger os atributos de um objeto. 
 
-TEXTO
+Em programação orientada a objetos, os atributos de um objeto podem ser “trancados” dentro do objeto, definindo suas propriedades como privadas, ou seja, elas podem ser consultadas, mas não modificadas por outros objetos.
 
 ### Herança
+Para evitar repetição de entidades, usamos Herança para passar características e responsabilidades.
 
-TEXTO
+Em um sistema desenvolvido para uma escola, por exemplo, onde existam Entidades Alunos e Pessoas: 
+
+Ao criar uma classe Pessoa, podemos afirmar que toda pessoa possui um “nome”. Por outro lado, todo aluno também deveria ter um nome, sendo assim, para que todo Aluno tenha um nome, fazemos com que o Aluno herde a característica “nome” da classe Pessoa, pois todo Aluno é uma Pessoa (mas nem toda pessoa é um aluno).
 
 ### Polimorfismo
+O Polimorfismo, por sua vez, diz respeito à especialização das classes “filhas” (herdeiras). Seguindo o Exemplo da Escola, a entidade Aluno teria como característica uma “matrícula”, mesmo que a entidade Pessoa (pai de Aluno, por exemplo) não o tenha.
+Nesse caso, podemos afirmar que Aluno ainda teria sua base vinda de Pessoa, mas teria mudanças para sua funcionalidade específica.
 
-TEXTO
+Seguindo o mesmo padrão, poderia haver uma terceira entidade chamada Professor, que seria herdada de Pessoa, mas com características diferentes de Alunos.
+
+Essa característica é o Polimorfismo.
 
 # Links Úteis
 
