--- a/5. Introdução à Orientação a Objeto I/5.2 - Programação Orientada a Objetos.md
+++ b/5. Introdução à Orientação a Objeto I/5.2 - Programação Orientada a Objetos.md
@@ -144,7 +144,7 @@ Assim, abstraindo um pouco a analogia, uma classe é um conjunto de característ
 Repare que a classe em si é um conceito abstrato, como um *molde*, que se torna concreto e palpável através da criação de um *objeto*.
 Chamamos essa criação de instanciação da classe, como se estivéssemos usando esse molde (classe) para criar um objeto.
 
-**Exercícios de criação de classes e objetos**
+**Exercícios**
 #### → Vamos aplicar?
 - [ ] [Exercício 1](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%201/)
 - [ ] [Exercício 2](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%202/)
