--- a/5. Introdução à Orientação a Objeto I/5.3 - Abstração.md
+++ b/5. Introdução à Orientação a Objeto I/5.3 - Abstração.md
@@ -6,17 +6,93 @@
 - [Abstração](#abstração)
   - [Conceito](#conceito)
   - [Exemplos](#exemplos)
+- [Diagrama de classes em UML](diagrama-de-classes-em-uml)
 
 - [Links Úteis](#links-úteis)
 
 # Abstração
-TEXTO
+Recapitulando...
+"Abstrair algo significa esconder os detalhes da implementação dentro de algo – às vezes um protótipo, às vezes em uma função. Portanto, quando você chama a função, não precisa entender exatamente o que ela está fazendo."
 
 ## Conceito
-TEXTO TEXTO TEXTO
+Um exemplo claro do conceito de abstração seria o funcionamento de um carro. Quando acionamos ele para ligar, não precisamos saber quais passos ele faz para colocar o motor em funcionamento. Quando acionamos o freio, não precisamos saber todos os mecanismos que são acionados para fazer o carro frear. Apenas sabemos o que cada função do carro produz como resultado.
+
+Voltando para a codificação, se você tivesse que entender cada função em uma base de código grande, você nunca codificaria nada, pois, levaria meses para terminar de ler e entender a lógica de tudo isso.
+
+Contudo, abstraindo certos detalhes, você é capaz de criar uma base de código reutilizável, simples de entender e facilmente alterável.
 
 ## Exemplos
-TEXTO TEXTO
+Vamos analisar a seguinte classe:
+```javascript
+public class Conta {
+  cod_banco;
+  num_conta;
+  saldo;
+  limite;
+
+  void ConsultarSaldo() {
+    console.log(“Conta: ” + this.num_conta);
+    console.log(“Saldo: ” + this.saldo);
+  }
+
+  void Depositar(valor) {
+      this.saldo = this.saldo + valor;
+  }
+
+  void Sacar(valor) {
+      this.saldo = this.saldo - valor;
+  }
+}
+```
+
+Para este caso, um cliente só precisa entender que uma conta é um local, em um determinado banco, onde é possível ser depositado e sacado valores.Para exemplificar este caso, criamos uma classe Conta com os atributos: código do banco, número da conta, saldo e limite. Criamos também um método ConsultarSaldo, onde ele retorna qual o saldo da conta naquele momento. Criamos também outro método chamado Depositar onde passamos um valor como parâmetro e ele soma esse ao saldo atual da conta. Outro método chamado Sacar foi criado com um valor passado por parâmetro, onde o mesmo subtrai esse valor do saldo atual da conta.
+
+**Exemplo 2:**
+Vamos pensar em um animal. Quais seriam os seus atributos e métodos?
+
+**Exemplo 3:**
+Vamos pensar em uma pessoa adulta. Quais seriam os seus atributos e métodos?
+
+# Diagrama de classes em UML
+Para continuarmos os nossos estudos, vamos entender um pouco sobre UML. Para isso, peguem papel e caneta!
+
+A sigla UML vem do inglês - *Unified Modeling Language* - que traduzindo para o português, significa **Linguagem de Modelagem Unificada**.
+Essa representação é um recurso visual poderoso na abstração.
+
+Basicamente, um diagrama de classe em UML contém o nome da classe, seus atributos e seus métodos, de uma maneira visual. Observe a imagem a seguir:
+
+<div style="text-align:center;">
+  <img src="https://github.com/reprograma/on25-IJS-orientacao-objetos-I/assets/26902816/af4931f0-f032-43fa-acf8-4efc2cdf61dd" width="300px" />
+</div>
+
+Como podemos observar, o diagrama de classes padrão é organizado da seguinte maneira:
+
+- **Parte superior:** contém o nome da classe. Esta parte é sempre necessária.
+
+- **Parte do meio:** contém os atributos da classe. Use esta parte para descrever as qualidades da classe, bem como o *tipo de dado* de cada um deles.
+
+- **Parte inferior:** inclui as operações da classe (métodos). Exibido em formato de lista, cada operação ocupa sua própria linha. As operações descrevem como uma classe interage com dados.
+
+Além disso, cada item da classe também possuem os **modificadores de acesso de membro**. Para nós, no momento, os únicos que são importantes são:
+
+- Público (+)
+- Privado (-)
+
+Pronto! Agora você já sabe o básico de UML e já podemos seguir adiante e colocar isso em prática!
+
+#### → Vamos praticar?
+- Pegue seu papel e caneta (ou lápis) e vamos criar três UMLs para representar os três exemplos acima.
+
+- Agora, observe as UMLs a seguir e escreva as classes que elas representam (os métodos **não** precisam ser implementados).
+
+<div style="display:flex;gap:16px;justify-content:center">
+  <img src="https://github.com/reprograma/on25-IJS-orientacao-objetos-I/assets/26902816/af4931f0-f032-43fa-acf8-4efc2cdf61dd" width="300px" />
+  <img src="https://github.com/reprograma/on25-IJS-orientacao-objetos-I/assets/26902816/188c5848-9d65-47ed-a03e-6068f885adb0" width="300px" />
+</div>
+
+**Exercícios**
+#### → Vamos aplicar?
+- [ ] [Exercício 4](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%204/)
 
 # Links Úteis
 - [Dev Media - Programação Orientada a Objetos](https://www.devmedia.com.br/programacao-orientada-a-objetos-e-programacao-estruturada/32813)
