atualizar conteúdo e exercícios

--- a/5. Introdução à Orientação a Objeto I/5.3 - Abstração.md
+++ b/5. Introdução à Orientação a Objeto I/5.3 - Abstração.md
@@ -53,6 +53,9 @@ Vamos pensar em um animal. Quais seriam os seus atributos e métodos?
 **Exemplo 3:**
 Vamos pensar em uma pessoa adulta. Quais seriam os seus atributos e métodos?
 
+**Exemplo 4:**
+Por fim, vamos pensar em uma televisão. Quais seriam os seus atributos e métodos?
+
 # Diagrama de classes em UML
 Para continuarmos os nossos estudos, vamos entender um pouco sobre UML. Para isso, peguem papel e caneta!
 
@@ -73,7 +76,8 @@ Como podemos observar, o diagrama de classes padrão é organizado da seguinte m
 
 - **Parte inferior:** inclui as operações da classe (métodos). Exibido em formato de lista, cada operação ocupa sua própria linha. As operações descrevem como uma classe interage com dados.
 
-Além disso, cada item da classe também possuem os **modificadores de acesso de membro**. Para nós, no momento, os únicos que são importantes são:
+Além disso, cada item da classe também possuem os **modificadores de acesso de membro**. Entenderemos um pouco melhor sobre modificadores de acesso logo mais.
+Para nós, no momento, os únicos que são importantes são:
 
 - Público (+)
 - Privado (-)
