--- a/5. Introdução à Orientação a Objeto I/5.3 - Abstração.md
+++ b/5. Introdução à Orientação a Objeto I/5.3 - Abstração.md
@@ -99,9 +99,11 @@ Pronto! Agora você já sabe o básico de UML e já podemos seguir adiante e col
 - [ ] [Exercício 4](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%204/)
 
 # Links Úteis
+- [Lucichart - O que é um diagrama de classe UML?](https://www.lucidchart.com/pages/pt/o-que-e-diagrama-de-classe-uml)
 - [Dev Media - Programação Orientada a Objetos](https://www.devmedia.com.br/programacao-orientada-a-objetos-e-programacao-estruturada/32813)
 - [Dev Media - Os 4 pilares da Programação Orientada a Objetos](https://www.devmedia.com.br/os-4-pilares-da-programacao-orientada-a-objetos/9264)
 - [Alura - POO: o que é programação orientada a objetos?](https://www.alura.com.br/artigos/poo-programacao-orientada-a-objetos)
+- [Kenzie - O que é programação orientada a objetos e quais são seus pilares?](https://kenzie.com.br/blog/programacao-orientada-a-objetos/)
 
 ---
 [Voltar para o início](../README.md)
