--- a/5. Introdução à Orientação a Objeto I/5.4 - Encapsulamento.md
+++ b/5. Introdução à Orientação a Objeto I/5.4 - Encapsulamento.md
@@ -302,10 +302,11 @@ class User extends Person {
 - [ ] [Exercício 7](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%207/)
 
 # Links Úteis
-
+- [Alura - This, Getters e Setters nas classes Javascript](https://www.alura.com.br/artigos/as-classes-no-javascript)
 - [Dev Media - Programação Orientada a Objetos](https://www.devmedia.com.br/programacao-orientada-a-objetos-e-programacao-estruturada/32813)
 - [Dev Media - Os 4 pilares da Programação Orientada a Objetos](https://www.devmedia.com.br/os-4-pilares-da-programacao-orientada-a-objetos/9264)
 - [Alura - POO: o que é programação orientada a objetos?](https://www.alura.com.br/artigos/poo-programacao-orientada-a-objetos)
+- [Kenzie - O que é programação orientada a objetos e quais são seus pilares?](https://kenzie.com.br/blog/programacao-orientada-a-objetos/)
 
 ---
 
