atualizar exercício para casa

--- a/5. Introdução à Orientação a Objeto I/5.4 - Encapsulamento.md
+++ b/5. Introdução à Orientação a Objeto I/5.4 - Encapsulamento.md
@@ -301,6 +301,11 @@ class User extends Person {
 - [ ] [Exercício 6](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%206/)
 - [ ] [Exercício 7](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%207/)
 
+#### → Exercício para casa
+[Exercício para casa](../Exerc%C3%ADcios/Para%20casa/)
+
+> Lembrete para a prô: perguntar se as alunas já aprenderam sobre exportar e importar com o `module.exports` e `require`. Caso não tenham aprendido, explicar e ensinar como se faz.
+
 # Links Úteis
 - [Alura - This, Getters e Setters nas classes Javascript](https://www.alura.com.br/artigos/as-classes-no-javascript)
 - [Dev Media - Programação Orientada a Objetos](https://www.devmedia.com.br/programacao-orientada-a-objetos-e-programacao-estruturada/32813)
