corrigir erros de escrita

--- a/5. Introdução à Orientação a Objeto I/5.1 - Paradigmas de programação.md
+++ b/5. Introdução à Orientação a Objeto I/5.1 - Paradigmas de programação.md
@@ -75,7 +75,7 @@ No paradigma estruturado, as instruções passadas ao computador podem ser forma
 - Tipos de dados são resultado de muitas funções em um programa estruturado. Quando ocorrem alterações nesses tipos de dados, a alteração correspondente deve ser feita em todos os locais que atuam nesses tipos de dados dentro do programa;
 - Não é adequada para o desenvolvimento de grandes programas.
 
-**Exemplos de linguagens procedurais:**
+**Exemplos de linguagens estruturadas:**
 - C;
 - PHP;
 - COBOL;
@@ -104,7 +104,7 @@ Uma das grandes preocupações do POO é realçar o que é realmente importante.
 - Em geral, os programas possuem execução mais lenta por conta dos requisitos requeridos;
 - Curva de aprendizado aumentada.
 
-**Exemplos de linguagens procedurais:**
+**Exemplos de linguagens orientada a objetos:**
 - C++;
 - Java;
 - C#;
@@ -148,11 +148,11 @@ Aqui, subdivide-se o problema proposto e as funções implementadas ficam respon
 - Maior flexibilidade das linguagens e da estrutura.
 
 **Desvantagens:**
-- Linguagens puramente funcionais funcionam mais lentamente do que as tabelas de hash e, para alguns aplicativos, isso pode ser crítico.
+- Linguagens puramente funcionais funcionam mais lentamente para alguns aplicativos, isso pode ser crítico;
 - A programação funcional não é adequada para algoritmos em grafos;
 - Possui poucos frameworks, ferramentas e usuários.
 
-**Exemplos de linguagens procedurais:**
+**Exemplos de linguagens funcionais:**
 - JavaScript;
 - Scheme;
 - Scala.
