--- a/5. Introdução à Orientação a Objeto I/5.5 - Static (extra).md
+++ b/5. Introdução à Orientação a Objeto I/5.5 - Static (extra).md
@@ -9,6 +9,7 @@
   - [Conceito](#conceito)
   - [Propriedades estáticas](#propriedades-estáticas)
   - [Métodos estáticos](#métodos-estáticos)
+  - [Considerações](#considerações)
 
 - [Links Úteis](#links-úteis)
 
@@ -99,10 +100,10 @@ class Animal {
     console.log(`Energia atual: ${this.energy}`);
   }
 
-  static updateAnimalsHungry(name, hungry) {
+  static updateAnimalsHungry(name, updatedHungry) {
     this.animals = this.animals.map((animal) => {
       if (animal.name === name) {
-        const updatedAnimal = { name, hungry };
+        const updatedAnimal = { name, hungry: updatedHungry };
         return updatedAnimal;
       } else {
         return animal;
@@ -133,11 +134,48 @@ Animal.nextToEat(); // O próximo animal para comer é Caju. Ele está com 33 de
 caju.eat(); // O gato chamado Caju está comendo
 
 Animal.nextToEat(); // O próximo animal para comer é Aslam. Ele está com 32 de fome
+
+caju.nextToEat(); // TypeError: caju.nextToEat is not a function
 ```
 
 Agora, criamos um método estático `updateAnimalsHungry`, que atualiza a array estática `animals` a cada vez que um animal come, e um método estático `nextToEat` que retorna o nome do próximo animal que deve comer, de acordo com o tamanho da fome da lista de animais que criamos.
 
-#### → Vamos aplicar? [Exercício 2](/exercicios/para-sala/exercicio-2)
+## Considerações
+Perceba que, para se referir a métodos ou propriedades estáticas dentro da própria classe:
+- Se estivermos fazendo isso de dentro de um método estático, fazemos da seguinte maneira:
+
+```javascript
+static nomeDaPropEstatica;
+
+static metodoEstatico() {
+  console.log(this.nomeDaPropEstatica);
+}
+
+static outroMetodoEstatico() {
+  this.metodoEstatico();
+}
+```
+Nesse caso, apenas nos referimos normalmente com o `this`.
+
+- Porém, se estivermos dentro de um método normal ou do constructor, fazemos da seguinte maneira:
+
+```javascript
+static nomeDaPropEstatica;
+
+static metodoEstatico(){}
+
+metodoNaoEstatico() {
+  console.log(this.constructor.nomeDaPropEstatica);
+  this.constructor.metodoEstatico();
+}
+```
+
+Nesse caso, precisamos utilizar o `this.constructor`, não apenas o `this`.
+
+Outro ponto a se observar é que, ao tentar chamar uma propriedade estática através de um objeto instanciado, o retorno é `undefined`, pois ele procura por uma propriedade não estática com aquele nome, e como não encontra, retorna `undefined`.
+Ao mesmo tempo que, ao tentar chamar um método estático através de um objeto instanciado, recebemos um erro, pois esse método não existe (pelo menos, não para o objeto).
+
+#### → Vamos aplicar? [Exercício 8](../Exerc%C3%ADcios/Para%20sala/Exerc%C3%ADcio%208/)
 
 # Links Úteis
 - [Alura - Métodos e atributos estáticos](https://site.alura.com.br/apostila-csharp-orientacao-objetos/metodos-e-atributos-estaticos)
