--- a/5. Introdução à Orientação a Objeto I/5.5 - Static (extra).md
+++ b/5. Introdução à Orientação a Objeto I/5.5 - Static (extra).md
@@ -101,15 +101,12 @@ class Animal {
   }
 
   static updateAnimalsHungry(name, updatedHungry) {
-    this.animals = this.animals.map((animal) => {
-      if (animal.name === name) {
-        const updatedAnimal = { name, hungry: updatedHungry };
-        return updatedAnimal;
-      } else {
-        return animal;
-      }
-    });
-  }
+		const animalIndex = this.animals.findIndex(
+			(animal) => animal.name === name
+		);
+
+		this.animals[animalIndex].hungry = updatedHungry;
+	}
 
   static nextToEat() {
     const sortedByHungry = this.animals.sort((a, b) => {
