anotações da aula

--- a/5. Introdução à Orientação a Objeto I/5.3 - Abstração.md
+++ b/5. Introdução à Orientação a Objeto I/5.3 - Abstração.md
@@ -30,16 +30,16 @@ public class Conta {
   saldo;
   limite;
 
-  void ConsultarSaldo() {
+   ConsultarSaldo() {
     console.log(“Conta: ” + this.num_conta);
     console.log(“Saldo: ” + this.saldo);
   }
 
-  void Depositar(valor) {
+   Depositar(valor) {
       this.saldo = this.saldo + valor;
   }
 
-  void Sacar(valor) {
+   Sacar(valor) {
       this.saldo = this.saldo - valor;
   }
 }
