feat: tarefa de casa + anotações de aula

--- a/5. Introdução à Orientação a Objeto I/5.5 - Static (extra).md
+++ b/5. Introdução à Orientação a Objeto I/5.5 - Static (extra).md
@@ -38,7 +38,7 @@ class Animal {
     this.age = age;
     this.energy = 0;
     this.hungry = hungry;
-    this.constructor.animals.push({ name: this.name, hungry: this.hungry });
+    this.constructor.animals.push({ name: this.name, hungry: this.hungry }); //para acessar o método estático, precisa colocar o this.constructor.animals
   }
 
   eat() {
@@ -53,7 +53,7 @@ class Animal {
   }
 }
 
-console.log(Animal.animals); //[]
+console.log(Animal.animals); //[] //puxa a classe e depois o método static
 
 const aslam = new Animal('cachorro', 'Aslam', 3, 32);
 const caju = new Animal('gato', 'Caju', 3, 33);
@@ -105,7 +105,8 @@ class Animal {
 			(animal) => animal.name === name
 		);
 
-		this.animals[animalIndex].hungry = updatedHungry;
+		this.animals[animalIndex].hungry = updatedHungry; //aqui, não precisa ser feito o this.constructor.animals pq animals é uma propriedade estática.
+    // métodos estáticos e propriedades estáticas se conhecem, então não precisa do constructor
 	}
 
   static nextToEat() {
