--- a/5. Introdução à Orientação a Objeto I/5.1 - Paradigmas de programação.md
+++ b/5. Introdução à Orientação a Objeto I/5.1 - Paradigmas de programação.md
@@ -60,7 +60,7 @@ No entanto, trata-se de um paradigma relativamente complexo e, por isso, ele é 
 Dentro dos paradigmas de programação do tipo imperativo, alguns são:
 
 #### Programação Estruturada
-No paradigma estruturado, as instruções passadas ao computador podem ser formadas por 3 estruturas, sendo: (1) sequência: as instruções são codificadas na sequência a serem executadas; (2) condição: um bloco de código só é executado se uma condição for verdadeira; (3) repetição: um trecho de código pode ser executado repetidas vezes.
+No paradigma estruturado, as instruções passadas ao computador podem ser formadas por 3 estruturas, sendo: (1) sequência: as instruções são codificadas na sequência a serem executadas; (2) condição: um bloco de código só é executado se uma condição for verdadeira (if); (3) repetição: um trecho de código pode ser executado repetidas vezes (for, while).
 
 <div style="text-align:center;">
   <img src="https://github.com/reprograma/on25-IJS-orientacao-objetos-I/assets/26902816/2ddb73ba-0ebb-47a1-83ed-a16b2054b01f" />
@@ -75,7 +75,7 @@ No paradigma estruturado, as instruções passadas ao computador podem ser forma
 - Tipos de dados são resultado de muitas funções em um programa estruturado. Quando ocorrem alterações nesses tipos de dados, a alteração correspondente deve ser feita em todos os locais que atuam nesses tipos de dados dentro do programa;
 - Não é adequada para o desenvolvimento de grandes programas.
 
-**Exemplos de linguagens procedurais:**
+**Exemplos de linguagens estruturais:**
 - C;
 - PHP;
 - COBOL;
@@ -85,7 +85,7 @@ No paradigma estruturado, as instruções passadas ao computador podem ser forma
 #### Programação Orientada a Objetos (POO ou OOP ou OO)
 A programação orientada a objetos é um paradigma que fornece um modelo no qual um programa é uma coleção de objetos que interagem entre si, passando mensagens que transformam seu estado.
 
-Neste caso, todos os objetos possuem determinados estados e comportamentos. Enquanto os estados são descritos pelas classes como atributos, a forma como eles se comportam é definida por meio de métodos. 
+Neste caso, todos os objetos possuem determinados estados(atributos) e comportamentos(métodos). Enquanto os estados são descritos pelas classes como atributos, a forma como eles se comportam é definida por meio de métodos. 
 
 O paradigma de orientação à objetos é eficiente, possui diversos benefícios e é o mais popular do mundo!
 
@@ -104,7 +104,7 @@ Uma das grandes preocupações do POO é realçar o que é realmente importante.
 - Em geral, os programas possuem execução mais lenta por conta dos requisitos requeridos;
 - Curva de aprendizado aumentada.
 
-**Exemplos de linguagens procedurais:**
+**Exemplos de linguagens de programação Orientada a Objetos:**
 - C++;
 - Java;
 - C#;
@@ -130,7 +130,7 @@ Entre as principais vantagens associadas a essa categoria estão a facilidade de
 
 Além disso, os programas feitos com uma linguagem declarativa costumam ser menores, já que é preciso usar menos código para realizar um objetivo.
 
-Dentro dos paradigmas de programação do tipo imperativo, podemos destacar:
+Dentro dos paradigmas de programação do tipo declarativo, podemos destacar:
 
 #### Programação Funcional
 Considerado uma das derivações mais famosas do paradigma declarativo, o paradigma funcional recebe esse nome por se basear no uso de funções lógicas. 
@@ -152,7 +152,7 @@ Aqui, subdivide-se o problema proposto e as funções implementadas ficam respon
 - A programação funcional não é adequada para algoritmos em grafos;
 - Possui poucos frameworks, ferramentas e usuários.
 
-**Exemplos de linguagens procedurais:**
+**Exemplos de linguagens de programação funcional:**
 - JavaScript;
 - Scheme;
 - Scala.
@@ -168,7 +168,7 @@ Caso queira entender melhor sobre, assista o vídeo abaixo:
 - Computação Paralela
 - Lógico/Restritivo
 - Orientado a Dados
-- Orientado a Eventos
+- Orientado a Eventos (criação de jogos)
 
 # Links Úteis
 - [Geek Hunter - Quais são os paradigmas de programação mais importantes?](https://blog.geekhunter.com.br/quais-sao-os-paradigmas-de-programacao/)
