--- a/5. Introdução à Orientação a Objeto I/5.3 - Abstração.md
+++ b/5. Introdução à Orientação a Objeto I/5.3 - Abstração.md
@@ -30,16 +30,16 @@ public class Conta {
   saldo;
   limite;
 
-  void ConsultarSaldo() {
+   ConsultarSaldo() {
     console.log(“Conta: ” + this.num_conta);
     console.log(“Saldo: ” + this.saldo);
   }
 
-  void Depositar(valor) {
+   Depositar(valor) {
       this.saldo = this.saldo + valor;
   }
 
-  void Sacar(valor) {
+   Sacar(valor) {
       this.saldo = this.saldo - valor;
   }
 }
@@ -111,3 +111,19 @@ Pronto! Agora você já sabe o básico de UML e já podemos seguir adiante e col
 <p align="center">
   Desenvolvido com &#128156
 </p>
+
+class Cliente {
+  # id;
+  nome;
+  endereco;
+
+  constructor(id, nome, endereco){
+    this.#id = id;
+    this.nome = nome;
+    this.endereco = endereco;
+  }
+  editar(){}
+  deletar(){}
+}
+
+class Banco {}
